[package]
name = "sculpt-macros"
version = "0.0.1"
edition = "2021"
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["derive", "extra-traits"] }
