[package]
name = "sculpt"
version = "0.0.1"
edition = "2021"
description = "Early Development: Rust types for XML, Typescript, and other schemas"
license = { workspace = true }
authors = ["dsgallups <dsgallups@protonmail.com>"]
repository = "https://github.com/dsgallups/sculpt"
documentation = "https://docs.rs/sculpt"
readme = "README.md"
keywords = ["parser"]


[dependencies]
