[package]
name = "sculpt"
version = "0.0.1"
edition = "2021"
description = "Early Development: Rust types for XML, Typescript, and other schemas"
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
documentation = "https://docs.rs/sculpt"
readme = "README.md"
keywords = ["parser"]

[features]
serde = ["dep:serde"]


[dependencies]
quick-xml = "0.37.2"
serde = { version = "1.0.217", features = ["derive"], optional = true }
thiserror = "2.0.11"
